Opal 1113 remove catalog from k8s configs (#37)
* local dev setup up to date, catalog removed

- AWS side of overlay still needs updates
- Currently don't have a way to build opal/weave into singleuser

* removed catalog from jhub config

* made prod/dev kustomize yamls for aws and local

* update gitignore

* ingress fixes for aws-prod

* changed to use public singleuser image

* deleted remaining references to catalog

* missed a catalog reference

* fixed path for start_local.bash

--- a/kubernetes/overlays/aws_prod/kustomization.yaml
+++ b/kubernetes/overlays/aws_prod/kustomization.yaml
@@ -1,14 +1,12 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
-namespace: opal
-
-bases:
-  - ../../base
+namespace: opal-prod
 
 resources:
+  - ../../base
   - ingress.yaml
-  - init_singleuser_image_pytorch.yaml
+  - init_singleuser_image.yaml
 
 configMapGenerator:
   - name: deployment-env
