--- a/kubernetes/base/extra_resources/.env
+++ b/kubernetes/base/extra_resources/.env
@@ -1,27 +1,7 @@
-COMPOSE_PROJECT_NAME=opal
-
-############################## Docker Images ##############################
-SINGLE_USER_TIP_IMAGE=registry.il2.dso.mil/skicamp/project-opal/tip:a4173f7b
-OPALCATALOG_FE_IMAGE=registry.il2.dso.mil/skicamp/project-opal/opal-catalog-fe:5799edaf
-OPALCATALOG_BE_IMAGE=registry.il2.dso.mil/skicamp/project-opal/opal-catalog-be:354ccafb
-POSTGRESQL_IMAGE=registry1.dso.mil/ironbank/opensource/postgres/postgresql12:12.9
-MINIO_IMAGE=registry1.dso.mil/ironbank/opensource/minio/minio:RELEASE.2022-01-28T02-28-16Z
-JUPYTERHUB_IMAGE=registry1.dso.mil/ironbank/opensource/metrostar/jupyterhub:2.1.1_v3
-KEYCLOAK_IMAGE=registry1.dso.mil/ironbank/opensource/keycloak/keycloak:16.1.1
-IB_PYTORCH_IMAGE=registry1.dso.mil/ironbank/opensource/metrostar/pytorch:1.13.0
-TRAEFIK_IMAGE=registry1.dso.mil/ironbank/opensource/traefik/traefik:2.6.1
-
-############################## Opalcatalog-fe/be Environment Variables ##############################
-SERVICE_PREFIX=/services/opal-catalog
-BE_HOST=opalcatalog-be
-BE_PORT=9001
-JUPYTERHUB_HOST=jupyterhub
-DB_URL=postgresql://postgres:postgres@postgresql/catalog-db
+############################## Jupyterhub Environment Variables ##############################
 KEYCLOAK_CLIENT_ID=opal-jupyterhub
 KEYCLOAK_REALM=master
-JUPYTERHUB_SERVICE_URL=jupyterhub
 PYTHONPATH=/python-packages/:$PYTHONPATH
-JUPYTERHUB_CLIENT_ID=service-opal-catalog-be
 KEYCLOAK_JUPYTERHUB_USERNAME_KEY=preferred_username
 
 ############################## Keycloak Environment Variables ##############################
@@ -33,7 +13,7 @@ PROXY_ADDRESS_FORWARDING=true
 ############################## Postgresql Environment Variables ##############################
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
-POSTGRES_DB=catalog-db
+POSTGRES_DB=keycloak
 POSTGRES_HOST_AUTH_METHOD=trust
 
 ############################## Minio Environment Variables ##############################
