--- a/kubernetes/overlays/aws_dev/kustomization.yaml
+++ b/kubernetes/overlays/aws_dev/kustomization.yaml
@@ -1,14 +1,13 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
-namespace: opal
+namespace: opal-dev
 
-bases:
-  - ../../base/
 
 resources:
+  - ../../base
   - ingress.yaml
-  - init_singleuser_image.yaml
+  - init_singleuser_image_pytorch.yaml
 
 configMapGenerator:
   - name: deployment-env
