--- a/kubernetes/overlays/local_dev_prod/k8.env
+++ b/kubernetes/overlays/local_dev_prod/k8.env
@@ -1,16 +1,9 @@
-############################## Opalcatalog-fe/be Environment Variables ##############################
-JUPYTERHUB_PORT=443
-KEYCLOAK_AUTH_SERVER_URL=https://keycloak-k8.10.96.30.9.nip.io/auth
-KEYCLOAK_CALLBACK_URL=https://opal-k8.10.96.30.9.nip.io/services/opal-catalog/oauth_callback
-JUPYTERHUB_API_URL=http://hub:8081/hub/api
-
 ############################## Jupyterhub Environment Variables ##############################
-OPAL_CATALOG_CALLBACK=https://opal-k8.10.96.30.9.nip.io/services/opal-catalog/oauth_callback
 KEYCLOAK_JUPYTERHUB_OAUTH_CALLBACK_URL=https://opal-k8.10.96.30.9.nip.io/hub/oauth_callback
 KEYCLOAK_JUPYTERHUB_AUTHORIZE_URL=https://keycloak-k8.10.96.30.9.nip.io/auth/realms/master/protocol/openid-connect/auth
 KEYCLOAK_JUPYTERHUB_USERDATA_URL=https://keycloak-k8.10.96.30.9.nip.io/auth/realms/master/protocol/openid-connect/userinfo
 KEYCLOAK_OPAL_API_URL=https://keycloak-k8.10.96.30.9.nip.io/auth/realms/master/protocol/openid-connect/token
-SINGLE_USER_IMAGE=registry.il2.dso.mil/skicamp/project-opal/tip:d3ddd56e
+SINGLE_USER_IMAGE=deploytime_singleuser
 OPAL_BANNER_TEXT=Kubernetes Local Environment
 OPAL_BANNER_COLOR=ForestGreen
 
