add second postgres instance for weave

--- a/docker-compose/.env
+++ b/docker-compose/.env
@@ -29,3 +29,9 @@ MINIO_IDENTITY_OPENID_CLAIM_NAME=policy
 ############################## Mongodb Environment Variables ##############################
 MONGO_INITDB_ROOT_USERNAME=root
 MONGO_INITDB_ROOT_PASSWORD=example
+
+############################## Postgresql Environment Variables ##############################
+WEAVE_SQL_HOST=http://jhub-postgresql
+WEAVE_SQL_USERNAME=postgres
+WEAVE_SQL_PASSWORD=postgres
+WEAVE_SQL_PORT=5432
