fixed test issue in .env

--- a/docker-compose/.env
+++ b/docker-compose/.env
@@ -31,7 +31,7 @@ MONGO_INITDB_ROOT_USERNAME=root
 MONGO_INITDB_ROOT_PASSWORD=example
 
 ############################## Postgresql Environment Variables ##############################
-WEAVE_SQL_HOST=http://jhub-postgresql
+WEAVE_SQL_HOST=jhub-postgresql
 WEAVE_SQL_USERNAME=postgres
 WEAVE_SQL_PASSWORD=postgres
 WEAVE_SQL_PORT=5432
