--- a/docker-compose/.env
+++ b/docker-compose/.env
@@ -1,10 +1,10 @@
 COMPOSE_PROJECT_NAME=opal
 
 ############################## Docker Images ##############################
-IB_SINGLEUSER_IMAGE=registry1.dso.mil/ironbank/opensource/metrostar/singleuser:singleuser_v23
+IB_SINGLEUSER_IMAGE=registry1.dso.mil/ironbank/opensource/metrostar/singleuser:core_singleuser_v24
 POSTGRESQL_IMAGE=registry1.dso.mil/ironbank/opensource/postgres/postgresql12:12.14
 MINIO_IMAGE=registry1.dso.mil/ironbank/opensource/minio/minio:RELEASE.2022-01-28T02-28-16Z
-JUPYTERHUB_IMAGE=registry1.dso.mil/ironbank/opensource/metrostar/jupyterhub:jupyterhub_v10
+JUPYTERHUB_IMAGE=registry1.dso.mil/ironbank/opensource/metrostar/jupyterhub:jupyterhub_v11
 KEYCLOAK_IMAGE=registry1.dso.mil/ironbank/opensource/keycloak/keycloak:16.1.1
 TRAEFIK_IMAGE=registry1.dso.mil/ironbank/opensource/traefik/traefik:v2.9.9
 MONGODB_IMAGE=registry1.dso.mil/ironbank/opensource/mongodb/mongodb:6.0.5
@@ -35,3 +35,4 @@ WEAVE_SQL_HOST=jhub-postgresql
 WEAVE_SQL_USERNAME=postgres
 WEAVE_SQL_PASSWORD=postgres
 WEAVE_SQL_PORT=5432
+
