separate log volume for keycloak and traefik

--- a/docker-compose/.env
+++ b/docker-compose/.env
@@ -18,7 +18,7 @@ KEYCLOAK_JUPYTERHUB_CLIENT_ID=opal-jupyterhub
 PROXY_ADDRESS_FORWARDING=true
 
 KC_LOG="console,file"
-KC_LOG_FILE="/logs/keycloak/kc_logs.json"
+KC_LOG_FILE="/logs/kc_logs.json"
 KC_LOG_FILE_OUTPUT="json"
 KC_LOG_LEVEL="org.keycloak.events:DEBUG"
 KC_PROXY="edge"
