keycloak hates docker volumes

--- a/docker-compose/docker-compose.yml
+++ b/docker-compose/docker-compose.yml
@@ -91,7 +91,7 @@ services:
       - "/var/run/docker.sock:/var/run/docker.sock:ro"
       - "./traefik/traefik_dynamic.yml:/etc/traefik/traefik_dynamic.yml"
       - "./traefik/traefik.yml:/etc/traefik/traefik.yml"
-      - "traefik_log_storage:/logs"
+      - "./access_logs:/logs"
     env_file:
       - ./.env
       - ./.env.secrets
@@ -121,5 +121,3 @@ volumes:
   postgres_storage:
   mongo_storage:
   jhub_postgres_storage:
-  keycloak_log_storage:
-  traefik_log_storage:
