--- a/docker-compose/.env
+++ b/docker-compose/.env
@@ -5,7 +5,7 @@ IB_SINGLEUSER_IMAGE=registry1.dso.mil/ironbank/opensource/metrostar/singleuser:c
 POSTGRESQL_IMAGE=registry1.dso.mil/ironbank/opensource/postgres/postgresql12:12.14
 MINIO_IMAGE=registry1.dso.mil/ironbank/opensource/minio/minio:RELEASE.2022-01-28T02-28-16Z
 JUPYTERHUB_IMAGE=registry1.dso.mil/ironbank/opensource/metrostar/jupyterhub:jupyterhub_v11
-KEYCLOAK_IMAGE=registry1.dso.mil/ironbank/opensource/keycloak/keycloak:16.1.1
+KEYCLOAK_IMAGE=registry1.dso.mil/ironbank/opensource/keycloak/keycloak:25.0.2
 TRAEFIK_IMAGE=registry1.dso.mil/ironbank/opensource/traefik/traefik:v3.0.4
 MONGODB_IMAGE=registry1.dso.mil/ironbank/opensource/mongodb/mongodb:6.0.5
 CUDA_IMAGE=registry1.dso.mil/ironbank/opensource/metrostar/pytorch:cuda_v3
@@ -16,6 +16,17 @@ KEYCLOAK_JUPYTERHUB_CLIENT_ID=opal-jupyterhub
 # Uncomment below line for additional keycloak logging
 # KEYCLOAK_LOGLEVEL=DEBUG
 PROXY_ADDRESS_FORWARDING=true
+
+KC_LOG="console,file"
+KC_LOG_FILE="/logs/keycloak/kc_logs.json"
+KC_LOG_FILE_OUTPUT="json"
+KC_LOG_LEVEL="org.keycloak.events:DEBUG"
+KC_PROXY="edge"
+KC_CACHE="ispn"
+KC_HOSTNAME_STRICT="false"
+KC_HEALTH_ENABLED="true"
+KC_HTTP_RELATIVE_PATH="/auth"
+KC_HTTP_MANAGEMENT_RELATIVE_PATH="/"
 
 ############################## Postgresql Environment Variables ##############################
 POSTGRES_USER=postgres
