--- a/docker-compose/.env
+++ b/docker-compose/.env
@@ -3,10 +3,11 @@ COMPOSE_PROJECT_NAME=opal
 ############################## Docker Images ##############################
 IB_SINGLEUSER_IMAGE=registry1.dso.mil/ironbank/opensource/metrostar/pytorch:cuda_v7
 POSTGRESQL_IMAGE=registry1.dso.mil/ironbank/opensource/postgres/postgresql12:12.14
-MINIO_IMAGE=registry1.dso.mil/ironbank/opensource/minio/minio:RELEASE.2022-01-28T02-28-16Z
+MINIO_IMAGE=registry1.dso.mil/ironbank/opensource/minio/minio:RELEASE.2024-06-04T19-20-08Z
+#MINIO_IMAGE=registry1.dso.mil/ironbank/opensource/minio/minio:RELEASE.2022-01-28T02-28-16Z
 JUPYTERHUB_IMAGE=registry1.dso.mil/ironbank/opensource/metrostar/jupyterhub:jupyterhub_v11
 KEYCLOAK_IMAGE=registry1.dso.mil/ironbank/opensource/keycloak/keycloak:25.0.2
-TRAEFIK_IMAGE=registry1.dso.mil/ironbank/opensource/traefik/traefik:v3.0.4
+TRAEFIK_IMAGE=registry1.dso.mil/ironbank/opensource/traefik/traefik:v3.2.1
 MONGODB_IMAGE=registry1.dso.mil/ironbank/opensource/mongodb/mongodb:6.0.5
 CUDA_IMAGE=registry1.dso.mil/ironbank/opensource/metrostar/pytorch:cuda_v3
 
