--- a/docker-compose/.env
+++ b/docker-compose/.env
@@ -1,14 +1,14 @@
 COMPOSE_PROJECT_NAME=opal
 
 ############################## Docker Images ##############################
-IB_SINGLEUSER_IMAGE=registry1.dso.mil/ironbank/opensource/metrostar/pytorch:cuda_v7
-POSTGRESQL_IMAGE=registry1.dso.mil/ironbank/opensource/postgres/postgresql12:12.14
-MINIO_IMAGE=registry1.dso.mil/ironbank/opensource/minio/minio:RELEASE.2022-01-28T02-28-16Z
-JUPYTERHUB_IMAGE=registry1.dso.mil/ironbank/opensource/metrostar/jupyterhub:jupyterhub_v11
+IB_SINGLEUSER_IMAGE=registry1.dso.mil/ironbank/opensource/metrostar/pytorch:cuda_v8
+POSTGRESQL_IMAGE=registry1.dso.mil/ironbank/opensource/postgres/postgresql12:12.22
+MINIO_IMAGE=registry1.dso.mil/ironbank/opensource/minio/minio:RELEASE.2025-05-24T17-08-30Z
+JUPYTERHUB_IMAGE=registry1.dso.mil/ironbank/opensource/metrostar/jupyterhub:jupyterhub_v12
 KEYCLOAK_IMAGE=registry1.dso.mil/ironbank/opensource/keycloak/keycloak:25.0.2
-TRAEFIK_IMAGE=registry1.dso.mil/ironbank/opensource/traefik/traefik:v3.0.4
+TRAEFIK_IMAGE=registry1.dso.mil/ironbank/opensource/traefik/traefik:v3.4.1
 MONGODB_IMAGE=registry1.dso.mil/ironbank/opensource/mongodb/mongodb:6.0.5
-CUDA_IMAGE=registry1.dso.mil/ironbank/opensource/metrostar/pytorch:cuda_v3
+CUDA_IMAGE=registry1.dso.mil/ironbank/opensource/metrostar/pytorch:cuda_v8
 
 ############################## Keycloak Environment Variables ##############################
 KEYCLOAK_JUPYTERHUB_USERNAME_KEY=preferred_username
@@ -40,10 +40,12 @@ MINIO_IDENTITY_OPENID_CLAIM_NAME=policy
 ############################## Mongodb Environment Variables ##############################
 MONGO_INITDB_ROOT_USERNAME=root
 MONGO_INITDB_ROOT_PASSWORD=example
+MONGODB_HOST="mongo"
+MONGODB_USERNAME="root"
+MONGODB_PASSWORD="example"
 
 ############################## Postgresql Environment Variables ##############################
 WEAVE_SQL_HOST=jhub-postgresql
 WEAVE_SQL_USERNAME=postgres
 WEAVE_SQL_PASSWORD=postgres
 WEAVE_SQL_PORT=5432
-
