Updated dockerfile syntax to fix warnings

--- a/docker-compose/jupyterhub/Dockerfile
+++ b/docker-compose/jupyterhub/Dockerfile
@@ -1,6 +1,6 @@
 ARG JUPYTERHUB_IMAGE
 
-FROM $JUPYTERHUB_IMAGE as deploytime_jupyterhub 
+FROM $JUPYTERHUB_IMAGE AS deploytime_jupyterhub 
 
 #ARG OPAL_BANNER_COLOR
 #ARG OPAL_BANNER_TEXT
