Update .env file to clarify usage of Singleuser images

--- a/docker-compose/.env
+++ b/docker-compose/.env
@@ -1,7 +1,11 @@
 COMPOSE_PROJECT_NAME=opal
 
 ############################## Docker Images ##############################
+# Comment out the below line to use the Singleuser images
 IB_SINGLEUSER_IMAGE=registry1.dso.mil/ironbank/opensource/metrostar/pytorch:cuda_v8
+
+# Uncomment below line to use the Singleuser images
+# IB_SINGLEUSER_IMAGE=registry1.dso.mil/ironbank/opensource/metrostar/singleuser:core_singleuser_v29
 POSTGRESQL_IMAGE=registry1.dso.mil/ironbank/opensource/postgres/postgresql12:12.22
 MINIO_IMAGE=registry1.dso.mil/ironbank/opensource/minio/minio:RELEASE.2025-04-22T22-12-26Z
 JUPYTERHUB_IMAGE=registry1.dso.mil/ironbank/opensource/metrostar/jupyterhub:jupyterhub_v12
